--- a/marvel/CORE/UI/Cells/ComicCell/ComicCell.xib
+++ b/marvel/CORE/UI/Cells/ComicCell/ComicCell.xib
@@ -1,21 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20034" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20017"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ComicCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ComicCell" customModule="marvel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="282" height="251"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="282" height="251"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQV-6i-TFx" userLabel="ContentView">
+                        <rect key="frame" x="14" y="0.0" width="254" height="225"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_img" translatesAutoresizingMaskIntoConstraints="NO" id="TVZ-z9-csf">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="KsJ-gA-hDd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spider Man" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0q-x1-JT8">
+                                <rect key="frame" x="15" y="190" width="94" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TVZ-z9-csf" firstAttribute="leading" secondItem="HQV-6i-TFx" secondAttribute="leading" id="FEr-Wl-tlo"/>
+                            <constraint firstAttribute="trailing" secondItem="TVZ-z9-csf" secondAttribute="trailing" constant="14" id="XcP-M5-3OA"/>
+                            <constraint firstItem="D0q-x1-JT8" firstAttribute="leading" secondItem="TVZ-z9-csf" secondAttribute="leading" constant="15" id="eX4-mk-QeR"/>
+                            <constraint firstAttribute="bottom" secondItem="TVZ-z9-csf" secondAttribute="bottom" constant="50" id="egl-P0-bpK"/>
+                            <constraint firstItem="TVZ-z9-csf" firstAttribute="top" secondItem="HQV-6i-TFx" secondAttribute="top" id="ggw-ts-2ld"/>
+                            <constraint firstItem="D0q-x1-JT8" firstAttribute="top" secondItem="TVZ-z9-csf" secondAttribute="bottom" constant="15" id="k0j-yr-8dJ"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="HQV-6i-TFx" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="NcU-iQ-CMZ"/>
+                <constraint firstItem="HQV-6i-TFx" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="W6i-gj-dq2"/>
+                <constraint firstItem="HQV-6i-TFx" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="14" id="djY-fT-OX9"/>
+            </constraints>
+            <size key="customSize" width="282" height="251"/>
+            <point key="canvasLocation" x="197.10144927536234" y="153.68303571428569"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="splash_img" width="800" height="1731"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
