--- a/marvel/CORE/UI/Storyboards/Base.lproj/Main.storyboard
+++ b/marvel/CORE/UI/Storyboards/Base.lproj/Main.storyboard
@@ -16,18 +16,138 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView verifyAmbiguity="off" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="416" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B5y-S4-iPy" userLabel="comicsCollectionView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="yDQ-3Q-tN1">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bOr-Q4-6HE" userLabel="TopView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xBk-ar-olD">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kmc-ea-Pya" userLabel="seperator">
+                                            <rect key="frame" x="0.0" y="114" width="414" height="1"/>
+                                            <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="SBH-YK-N1K"/>
+                                            </constraints>
+                                        </view>
+                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t1w-Uh-RkP" userLabel="HeaderStack">
+                                            <rect key="frame" x="7" y="64" width="400" height="40"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYM-g2-157">
+                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="xYM-g2-157" secondAttribute="height" id="aKp-bl-I9j"/>
+                                                    </constraints>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="417" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marvel Fandom" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QcI-8i-GdV">
+                                                    <rect key="frame" x="40" y="0.0" width="320" height="40"/>
+                                                    <color key="tintColor" systemColor="systemRedColor"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                                    <color key="textColor" systemColor="systemRedColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="locString" value="MyAnnounces"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVl-7y-tAe">
+                                                    <rect key="frame" x="360" y="0.0" width="40" height="40"/>
+                                                    <color key="tintColor" systemColor="systemPinkColor"/>
+                                                    <state key="normal" image="magnifyingglass" catalog="system">
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="semibold"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xYM-g2-157" firstAttribute="width" secondItem="tVl-7y-tAe" secondAttribute="width" id="etP-38-bhE"/>
+                                                <constraint firstAttribute="height" constant="40" id="lEs-3A-NiP"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Kmc-ea-Pya" firstAttribute="leading" secondItem="xBk-ar-olD" secondAttribute="leading" id="1S4-uR-DHP"/>
+                                        <constraint firstItem="Kmc-ea-Pya" firstAttribute="top" secondItem="t1w-Uh-RkP" secondAttribute="bottom" constant="10" id="OJt-jI-emS"/>
+                                        <constraint firstItem="t1w-Uh-RkP" firstAttribute="leading" secondItem="xBk-ar-olD" secondAttribute="leading" constant="7" id="OkN-9I-hc6"/>
+                                        <constraint firstAttribute="bottom" secondItem="Kmc-ea-Pya" secondAttribute="bottom" id="dMm-Ef-K2I"/>
+                                        <constraint firstAttribute="trailing" secondItem="Kmc-ea-Pya" secondAttribute="trailing" id="sA3-A6-fB0"/>
+                                        <constraint firstAttribute="trailing" secondItem="t1w-Uh-RkP" secondAttribute="trailing" constant="7" id="srr-G8-ZCu"/>
+                                    </constraints>
+                                </view>
+                                <blurEffect style="regular"/>
+                            </visualEffectView>
+                            <visualEffectView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2NP-Ti-7DZ" userLabel="BottomView">
+                                <rect key="frame" x="0.0" y="862" width="414" height="34"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wFT-rc-ez9">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="systemUltraThinMaterial"/>
+                            </visualEffectView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="B5y-S4-iPy" secondAttribute="bottom" id="34a-XD-EWc"/>
+                            <constraint firstAttribute="bottom" secondItem="2NP-Ti-7DZ" secondAttribute="bottom" id="6Se-yw-dK7"/>
+                            <constraint firstItem="bOr-Q4-6HE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="DPw-Xx-Gyb"/>
+                            <constraint firstItem="bOr-Q4-6HE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QUQ-qr-KCg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B5y-S4-iPy" secondAttribute="trailing" id="Uiz-rl-F8x"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2NP-Ti-7DZ" secondAttribute="trailing" id="Ulz-cw-nGr"/>
+                            <constraint firstItem="B5y-S4-iPy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aFo-W4-09l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bOr-Q4-6HE" secondAttribute="trailing" id="hnE-wU-CzC"/>
+                            <constraint firstItem="2NP-Ti-7DZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="oM5-lg-E03"/>
+                            <constraint firstItem="t1w-Uh-RkP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="sPv-TF-1wO"/>
+                            <constraint firstItem="2NP-Ti-7DZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uar-35-1j9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="leading" secondItem="B5y-S4-iPy" secondAttribute="leading" id="xUu-9M-kY9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="comicsCollectionView" destination="B5y-S4-iPy" id="0On-Q4-1VQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="20" y="88"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="M42-pg-VmY">
+            <objects>
+                <viewController id="EA0-ed-1PX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GAm-hr-bat">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="gFz-Qh-yQa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JzJ-75-Bfy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="755" y="88"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
